--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "owl.carousel": "^2.3.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-owl-carousel": "^2.3.1",
