--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "owl.carousel": "^2.3.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-form-validator-core": "^1.0.0",
     "react-owl-carousel": "^2.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-validation": "^3.0.7",
+    "validator": "^13.1.17",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
