--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-form-validator-core": "^1.0.0",
+    "react-modal": "^3.11.2",
     "react-owl-carousel": "^2.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
